--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,21 +12,13 @@ html {
   scroll-behavior: smooth;
   background-color: black;
 }
-pre::-webkit-scrollbar {
-  display: none;
-}
-
-pre {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
 
 .prose pre {
-  @apply overflow-x-scroll border border-gray-700 bg-gray-900;
+  @apply overflow-auto block border border-gray-700 bg-gray-900;
 }
 
 .prose code {
-  @apply text-gray-200 px-1 py-0.5 border border-gray-800 rounded-md bg-gray-900;
+  @apply text-gray-200 inline px-1 py-0.5 border border-gray-800 rounded-md bg-gray-900;
 }
 
 .prose a {
@@ -68,4 +60,14 @@ pre {
   top: 0;
   backdrop-filter: saturate(180%) blur(20px);
   transition: background-color 0.1 ease-in-out;
+}
+
+pre::-webkit-scrollbar {
+  display: none;
+}
+
+pre {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  overflow: auto;
 }
