began adding custom css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,58 @@
   padding: 0;
 }
 
+.ZRoot {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  --gutterWidth: 16px;
+  --scrollbarWidth: 0px;
+  --windowWidth: calc(100vw - var(--scrollbarWidth));
+  --layoutWidth: calc(var(--windowWidth) - var(--gutterWidth) * 2);
+  --layoutWidthMax: 1000px;
+  --columnCountMax: 1;
+  --heroColumnCount: 1;
+}
+
+@media (min-width: 600px) {
+  .ZRoot {
+    --columnCountMax: 2;
+  }
+}
+@media (min-width: 900px) {
+  .ZRoot {
+    --columnCountMax: 4;
+    --heroColumnCount: 2;
+    --h1FontSize: 3rem;
+    --h2FontSize: 2rem;
+  }
+}
+@media (min-width: 1032px) {
+  .ZRoot {
+    --layoutWidth: calc(var(--layoutWidthMax));
+    --gutterWidth: calc(var(--windowWidth) / 2 - var(--layoutWidth) / 2);
+  }
+}
+
+.ZMain--Container {
+  width: var(--windowWidth);
+}
+
+.ZNav--Container {
+  width: var(--layoutWidth);
+}
+
+.ZLayoutW {
+  width: var(--layoutWidth);
+}
+
+.ZChildren--Container {
+  width: var(--layoutWidth);
+  margin: 0 auto;
+  display: grid;
+  place-items: center;
+}
+
 html {
   min-width: 360px;
   scroll-behavior: smooth;
